@@ -3372,7 +3372,7 @@ sub handle_ltlibraries
 	  if (defined $instdirs{$lib} && $instdirs{$lib} ne $dir)
 	    {
 	      err ($where, "`$lib' is already going to be installed in "
-		   . "`$instdirs{$lib}'");
+		   . "`$instdirs{$lib}'", partial => 1);
 	      err ($liblocations{$lib}, "`$lib' previously declared here");
 	    }
 	  else
@@ -6144,7 +6144,7 @@ sub check_ambiguous_conditional ($$$)
     conditional_ambiguous_p ($var, $cond, keys %{$var_value{$var}});
   if ($message)
     {
-      msg 'syntax', $where, "$message ...";
+      msg 'syntax', $where, "$message ...", partial => 1;
       msg_var ('syntax', $var, "... `$var' previously defined here");
       verb (macro_dump ($var));
     }
@@ -7585,7 +7585,7 @@ sub rule_define ($$$$$)
 		  ## is legitimate. (This is phony.test.)
 
 		  # msg ('syntax', $where,
-		  #      "redefinition of `$target'$condmsg...");
+		  #      "redefinition of `$target'$condmsg...", partial => 1);
 		  # msg_cond_target ('syntax', $cond, $target,
 		  # 		   "... `$target' previously defined here");
 		}
@@ -7624,7 +7624,8 @@ sub rule_define ($$$$$)
 	      my $oldsource = $target_source{$target}{$cond};
 	      return () if $source eq $oldsource;
 
-	      msg ('syntax', $where, "redefinition of `$target'$condmsg...");
+	      msg ('syntax', $where, "redefinition of `$target'$condmsg...",
+		   partial => 1);
 	      msg_cond_target ('syntax', $cond, $target,
 			       "... `$target' previously defined here");
 	      return ();
@@ -7645,7 +7646,7 @@ sub rule_define ($$$$$)
       if ($owner == TARGET_USER)
 	{
 	  # For user rules, just diagnose the ambiguity.
-	  msg 'syntax', $where, "$message ...";
+	  msg 'syntax', $where, "$message ...", partial => 1;
 	  msg_cond_target ('syntax', $ambig_cond, $target,
 			   "... `$target' previously defined here");
 	  return ();
@@ -7681,7 +7682,7 @@ sub rule_define ($$$$$)
 	  # Warn, because our workaround is meaningless in this case.
 	  if (scalar @conds == 0)
 	    {
-	      msg 'syntax', $where, "$message ...";
+	      msg 'syntax', $where, "$message ...", partial => 1;
 	      msg_cond_target ('syntax', $ambig_cond, $target,
 			       "... `$target' previously defined here");
 	      return ();
