@@ -1,5 +1,14 @@
 2002-09-29  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
+	* lib/Automake/Channels.pm (%_default_options): Add 'partial'.
+	(_format_message): Rename as ...
+	(_format_sub_message): ... this.
+	(_format_message): New function, extracted from ...
+	(_print_message): ... here.  Honor the 'partial' option.
+	($partial): New variable.
+	* automake.in (handle_ltlibraries, check_ambiguous_conditional,
+	rule_define): Mark partial messages.
+
 	* automake.in (handle_ltlibraries): Record library locations in
 	%liblocations, and print the previous declaration on error.
 	* tests/libtool6.test: Check that the locations of the two
